--- a/LeitnerBox/Info.plist
+++ b/LeitnerBox/Info.plist
@@ -2,20 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>LeitnerBox use your camera to take a picture for Question picture.</string>
-	<key>CFBundleIdentifier</key>
-	<string></string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-	</array>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>LeitnerBox uses your location for storing a location question if you need.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>LeitnerBox uses your location for storing a location question if you need.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>LeitnerBox uses your location for storing a location question if you need.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Share The LeitnerBox App with your friends</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -31,5 +19,9 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
